Update the new patch of VUE cdn url.

--- a/01- Setup Vue.js/index.html
+++ b/01- Setup Vue.js/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <script src="https://unpkg.com/vue"></script>
-    <!-- Import the Vue.js libaray by CDN or download it -->
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+    <!-- Import the Vue.js library by CDN or download it -->
     <!-- Vue is also available on 'unpkg' and 'cdnjs' (cdnjs takes some time to sync so the latest release may not be available yet). -->
-</head>
-<body >
+  </head>
+  <body>
     <div id="app">
-        <p>{{ message }}</p>
+      <p>{{ message }}</p>
     </div>
-</body>
+  </body>
 
-<script src="javascript.js"></script>
+  <script src="javascript.js"></script>
 </html>
