--- a/04-VUE-Lifecycle/index.html
+++ b/04-VUE-Lifecycle/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+  </head>
 
-<head>
-    <meta charset="utf-8">
-    <script src="https://unpkg.com/vue"></script>
-</head>
+  <body>
+    <div class="test"></div>
+  </body>
 
-<body>
-    <div class="test">
-        
-    </div>
-</body>
-
-<script src="javascript.js"></script>
-
+  <script src="javascript.js"></script>
 </html>
