Update 'Computed' & 'Watch' concept

--- a/05-Computed/index.html
+++ b/05-Computed/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+  </head>
 
-<head>
-    <meta charset="utf-8">
-    <script src="https://unpkg.com/vue"></script>
-</head>
-
-<body>
+  <body>
     <div id="app">
-        <h2>Converter C => F</h2>
-        <input type="text" placeholder="input the celsius" v-model="celsius">
-        <br>
-        <span>Fahrenheit：{{fahrenheit}}</span>
+      <h2>Converter C => F</h2>
+      <input type="text" placeholder="input the celsius" v-model="celsius" />
+      <br />
+      <span>Fahrenheit：{{fahrenheit}}</span>
     </div>
-</body>
+  </body>
 
-<script src="javascript.js"></script>
-
+  <script src="javascript.js"></script>
 </html>
