--- a/06-Web Component/index_2.html
+++ b/06-Web Component/index_2.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
     <title>Component Registration</title>
     <style>
-        #app {
-            margin: 1em;
-            font-size: 1.2em;
-        }
+      #app {
+        margin: 1em;
+        font-size: 1.2em;
+      }
 
-        .component {
-            border: 1px solid #000;
-            padding: 10px;
-        }
+      .component {
+        border: 1px solid #000;
+        padding: 10px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div id="app">
-        <my-component></my-component>
+      <my-component></my-component>
     </div>
 
     <div id="app2">
-        <my-component></my-component>
+      <my-component></my-component>
     </div>
 
     <script>
-        // Register for global component.
-        Vue.component('my-component', {
-            template: '<div class="component">A custom component of Vue!</div>'
-        });
-        // create a root instance
-        new Vue({
-            el: '#app'
-        });
+      // Register for global component.
+      Vue.component("my-component", {
+        template: '<div class="component">A custom component of Vue!</div>',
+      });
+      // create a root instance
+      new Vue({
+        el: "#app",
+      });
 
-        new Vue({
-            el: '#app2'
-        });
+      new Vue({
+        el: "#app2",
+      });
     </script>
-
-
-</body>
-
+  </body>
 </html>
