--- a/07-data-function/index.html
+++ b/07-data-function/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-  <title>Component</title>
-  <style>
-    #app {
-      margin: 1em;
-      font-size: 1.2em;
-    }
-    .component {
-      border: 1px solid #000;
-      padding: 10px;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div id="app">
-    {{ msg }}
-    <hr>
-    <my-component></my-component>
-  </div>
-
-  <script>
-    // register
-    Vue.component('my-component', {
-      template: '<div class="component">{{ msg }}</div>',
-      data: function() {
-        return {
-          // Component data need to be a function return.
-          // Need to return it in a minima function scope.
-          msg: 'A custom component of Vue!'
-        }
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
+    <title>Component</title>
+    <style>
+      #app {
+        margin: 1em;
+        font-size: 1.2em;
       }
-    });
-    // create a root instance
-    new Vue({
-      el: '#app',
-      data: {
-        msg: 'A root msg of Vue!'
+      .component {
+        border: 1px solid #000;
+        padding: 10px;
       }
-    });
-  </script>
+    </style>
+  </head>
 
+  <body>
+    <div id="app">
+      {{ msg }}
+      <hr />
+      <my-component></my-component>
+    </div>
 
-</body>
-
+    <script>
+      // register
+      Vue.component("my-component", {
+        template: '<div class="component">{{ msg }}</div>',
+        data: function () {
+          return {
+            // Component data need to be a function return.
+            // Need to return it in a minima function scope.
+            msg: "A custom component of Vue!",
+          };
+        },
+      });
+      // create a root instance
+      new Vue({
+        el: "#app",
+        data: {
+          msg: "A root msg of Vue!",
+        },
+      });
+    </script>
+  </body>
 </html>
