--- a/08-props/index.html
+++ b/08-props/index.html
@@ -1,55 +1,53 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
+    <title>Component</title>
+    <style>
+      #app {
+        margin: 1em;
+        font-size: 1.2em;
+      }
+      .component div {
+        margin-bottom: 1em;
+      }
+    </style>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-  <title>Component</title>
-  <style>
-    #app {
-      margin: 1em;
-      font-size: 1.2em;
-    }
-    .component div {
-      margin-bottom: 1em;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div id="app">
-    <my-component v-bind:parent-msg="msg"></my-component>
-  </div>
-
-  <script type="text/x-template" id="my-component">
-    <div class="component">
-      <div> ParentMsg: {{ parentMsg }} </div>
-      <div> ChildMsg: {{ msg }} </div>
+  <body>
+    <div id="app">
+      <my-component v-bind:parent-msg="msg"></my-component>
     </div>
-  </script>
 
-  <script>
-    // register
-    Vue.component('my-component', {
-      props: ["parentMsg"],
-      template: '#my-component',
-      data: function() {
-        return {
-          msg: 'Msg of Child!'
-        }
-      }
-    });
-    // a root instance
-    new Vue({
-      el: '#app',
-      data: {
-        msg: 'Msg of Parent!'
-      }
-    });
-  </script>
+    <script type="text/x-template" id="my-component">
+      <div class="component">
+        <div> ParentMsg: {{ parentMsg }} </div>
+        <div> ChildMsg: {{ msg }} </div>
+      </div>
+    </script>
 
-
-</body>
-
+    <script>
+      // register
+      Vue.component("my-component", {
+        props: ["parentMsg"],
+        template: "#my-component",
+        data: function () {
+          return {
+            msg: "Msg of Child!",
+          };
+        },
+      });
+      // Ｔhe root instance
+      new Vue({
+        el: "#app",
+        data: {
+          msg: "Msg of Parent!",
+        },
+      });
+    </script>
+  </body>
 </html>
