Update one-way-data-flow concept
Avoid using the two-way data flow

--- a/09-one way data flow/index_ex1_Finish.html
+++ b/09-one way data flow/index_ex1_Finish.html
@@ -1,52 +1,55 @@
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-  <title>Component</title>
-  <style>
-    #app {
-      margin: 1em;
-      font-size: 1.2em;
-    }
-    .component {
-      margin-bottom: 1em;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div id="app">
-    <div>count of parent: {{ counts }}</div>
-    <br>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-  </div>
-
-  <script>
-    Vue.component('my-component', {
-      template: '<div class="component"> <span> {{ c }}</span> - <button @click="c++">add</button></div>',
-      props: ["count"],
-      data() {
-        return {
-          c: this.count.num
-          // One-way data flow to unbind the parent data.
-        }
+<!DOCTYPE html>
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+    <title>Component</title>
+    <style>
+      #app {
+        margin: 1em;
+        font-size: 1.2em;
       }
-    });
-    new Vue({
-      el: '#app',
-      data:{
-        counts: {
-          num: 0
-        }
+      .component {
+        margin-bottom: 1em;
       }
-    });
-  </script>
+    </style>
+  </head>
 
+  <body>
+    <div id="app">
+      <button @click="counts.num++">parent add</button>
+      <div>count of parent: {{ counts }}</div>
+      <br />
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+    </div>
 
-</body>
-
+    <script>
+      Vue.component("my-component", {
+        template:
+          '<div class="component"> <span> {{ c }}</span> - <button @click="c++">add</button></div>',
+        props: ["count"],
+        data() {
+          return {
+            c: this.count.num,
+            // One-way data flow to unbind the parent data.
+          };
+        },
+      });
+      new Vue({
+        el: "#app",
+        data: {
+          counts: {
+            num: 0,
+          },
+        },
+      });
+    </script>
+  </body>
 </html>
