--- a/09-one way data flow/index_ex1.html
+++ b/09-one way data flow/index_ex1.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-  <title>Component</title>
-  <style>
-    #app {
-      margin: 1em;
-      font-size: 1.2em;
-    }
-    .component {
-      margin-bottom: 1em;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div id="app">
-    <div>count of parent: {{ counts }}</div>
-    <br>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-    <my-component :count="counts"></my-component>
-  </div>
-
-  <script>
-    Vue.component('my-component', {
-      template: '<div class="component"> <span> {{ count }}</span> - <button @click="count++">add</button></div>',
-      props: ["count"]
-      // Not exactually right for "Object" data bind into the component.
-      // Need to use one-way data flow method. 
-    });
-    new Vue({
-      el: '#app',
-      data:{
-        counts: 0
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+    <title>Component</title>
+    <style>
+      #app {
+        margin: 1em;
+        font-size: 1.2em;
       }
-    });
-  </script>
+      .component {
+        margin-bottom: 1em;
+      }
+    </style>
+  </head>
 
+  <body>
+    <div id="app">
+      <div>count of parent: {{ counts }}</div>
+      <button @click="counts++">parent add</button>
+      <br />
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+      <my-component :count="counts"></my-component>
+    </div>
 
-</body>
-
+    <script>
+      Vue.component("my-component", {
+        template:
+          '<div class="component"> <span> {{ count }}</span> - <button @click="count++">add</button></div>',
+        props: ["count"],
+        // Not exactly right for "Object" data bind into the component.
+        // Need to use one-way data flow method.
+      });
+      new Vue({
+        el: "#app",
+        data: {
+          counts: 0,
+        },
+      });
+    </script>
+  </body>
 </html>
