--- a/09-one way data flow/index_ex2.html
+++ b/09-one way data flow/index_ex2.html
@@ -1,55 +1,53 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-  <title>v-model-with-props</title>
-  <style>
-    #app {
-      margin: 1em;
-      font-size: 1.5em;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div id="app">
-    <p>
-      Parent: {{ message }} <input v-model="message">
-    </p>
-
-    <hr>
-
-    <p>
-      Child:
-      <my-component :parent-message="message"></my-component>
-    </p>
-  </div>
-
-
-  <script>
-    Vue.component('my-component', {
-      template: '<span>{{ parentMessage }} <input v-model="message"></span>',
-      props: {
-        parentMessage: String
-      },
-      data() {
-        return {
-          message: this.parentMessage
-          // Example for the One-way data flow to unbind the parent data.
-        }
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+    <title>v-model-with-props</title>
+    <style>
+      #app {
+        margin: 1em;
+        font-size: 1.5em;
       }
-    });
-    new Vue({
-      el: '#app',
-      data: {
-        message: 'hello'
-      }
-    });
-  </script>
+    </style>
+  </head>
 
-</body>
+  <body>
+    <div id="app">
+      <p>Parent: {{ message }} <input v-model="message" /></p>
 
+      <hr />
+
+      <p>
+        Child:
+        <my-component :parent-message="message"></my-component>
+      </p>
+    </div>
+
+    <script>
+      Vue.component("my-component", {
+        template:
+          '<span>{{ parentMessage }} <input v-model="childMessage"></span>',
+        props: {
+          parentMessage: String,
+        },
+        // Its own component data just render once.
+        data() {
+          return {
+            childMessage: this.parentMessage,
+            // Example for the One-way data flow to unbind the parent data.
+          };
+        },
+      });
+      new Vue({
+        el: "#app",
+        data: {
+          message: "hello",
+        },
+      });
+    </script>
+  </body>
 </html>
