--- a/09-one way data flow/index_ex2_Finish.html
+++ b/09-one way data flow/index_ex2_Finish.html
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+    <title>update-from-events</title>
+    <style>
+      #app {
+        margin: 1em;
+        font-size: 1.5em;
+      }
+    </style>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.js"></script>
-  <title>update-from-events</title>
-  <style>
-    #app {
-      margin: 1em;
-      font-size: 1.5em;
-    }
-  </style>
-</head>
+  <body>
+    <div id="app">
+      <p>Parent: {{ message }} <input v-model="message" /></p>
 
-<body>
+      <hr />
 
-  <div id="app">
-    <p>
-      Parent: {{ message }} <input v-model="message">
-    </p>
+      <p>
+        Child:
+        <my-component :parent-message="message"></my-component>
+      </p>
+    </div>
 
-    <hr>
-
-    <p>
-      Child:
-      <my-component :parent-message="message"></my-component>
-    </p>
-  </div>
-
-
-  <script>
-    Vue.component('my-component', {
-      template: '<span>\
+    <script>
+      Vue.component("my-component", {
+        template:
+          '<span>\
                     {{ parentMessage }}\
                     <input v-model="message">\
                     <button @click="updateText">Update</button>\
                   </span>',
-      props: {
-        parentMessage: String
-      },
-      data() {
-        return {
-          message: this.parentMessage
-        }
-      },
-      // Use a methods to implement a event to update the one-way data flow condition.
-      // "this.$parent" to get the parent Node in the child node.
-      // "$emit" Transmit(function name, value) to parent component.
-      methods: {
-        updateText() {
-          this.$parent.$emit('update', this.message);
-        }
-      }
-    });
-    new Vue({
-      el: '#app',
-      data: {
-        message: 'hello'
-      },
-      methods: {
-        selfUpdate(val) {
-          this.message = val;
-        }
-      },
-      // When the componet mounted, "this.$on" will bind the child's "update function" with parent's "selfUpdate methods".
-      // When the child's "updateText methods" fire, parent's "selfUpdate methods" too.
-      mounted() {
-        this.$on('update', this.selfUpdate);
-      }
-    });
-  </script>
-
-</body>
-
+        props: {
+          parentMessage: String,
+        },
+        data() {
+          return {
+            message: this.parentMessage,
+          };
+        },
+        // Use a methods to implement a event to update the one-way data flow condition.
+        // "this.$parent" to get the parent Node in the child node.
+        // "$emit" Transmit(function name, value) to parent component.
+        methods: {
+          updateText() {
+            this.$parent.$emit("update", this.message);
+          },
+        },
+      });
+      new Vue({
+        el: "#app",
+        data: {
+          message: "hello",
+        },
+        methods: {
+          selfUpdate(val) {
+            this.message = val;
+          },
+        },
+        // When the component mounted, "this.$on" will bind the child's "update function" with parent's "selfUpdate methods".
+        // When the child's "updateText methods" fire, parent's "selfUpdate methods" too.
+        mounted() {
+          this.$on("update", this.selfUpdate);
+        },
+      });
+    </script>
+  </body>
 </html>
